# m4ri-rust

./: .gitmodules  .travis.yml  Cargo.toml  README.md  build.rs  release.sh
benches/: binary_matrix.rs  binary_vector.rs
m4ri-rust/: Cargo.toml
m4ri-rust/benches/: binary_matrix.rs  binary_vector.rs
m4ri-rust/src/: lib.rs
m4ri-rust/src/friendly/: binary_matrix.rs  binary_vector.rs  mod.rs
m4ri-sys/: Cargo.toml  build.rs
m4ri-sys/src/: brilliantrussian.rs  djb.rs  echelonform.rs  graycode.rs  lib.rs  misc.rs  mp.rs  mzd.rs  mzp.rs  ple.rs  solve.rs  strassen.rs
src/: binary_matrix.rs  binary_vector.rs  lib.rs
src/ffi/: brilliantrussian.rs  djb.rs  echelonform.rs  graycode.rs  misc.rs  mod.rs  mp.rs  mzd.rs  mzd_t.rs  mzp.rs  ple.rs  solve.rs  strassen.rs
src/friendly/: binary_matrix.rs  binary_vector.rs
