[package]
name = "m4ri-rust"
version = "0.0.10"
authors = ["Thom Wiggers <thom@thomwiggers.nl>"]
description = "M4RI-based boolean linear algebra"
repository = "https://github.com/thomwiggers/m4ri-rust"
license = "GPL-2.0+"

[badges]
travis-ci = { repository = "thomwiggers/m4ri-rust" }
maintenance = { status = "experimental" }

[dependencies]
libc = "^0.2"
rand = "^0.4.0"

[dependencies.vob]
git = "https://github.com/thomwiggers/vob.git"
branch = "fast_version"

[profile.release]
opt-level = 3
lto = true

[features]
system_alloc = []
nightly = ["vob/reverse_bits"]
m4rm_mul = []
naive_mul = []
strassen_mul = []
