[package]
name = "m4ri-rust"
version = "0.1.0"
authors = ["Thom Wiggers <thom@thomwiggers.nl>"]
description = "M4RI-based boolean linear algebra"
repository = "https://github.com/thomwiggers/m4ri-rust"
license = "GPL-2.0+"

[badges]
travis-ci = { repository = "thomwiggers/m4ri-rust" }
maintenance = { status = "experimental" }

[dependencies]
libc = "^0.2"
rand = "^0.5.0"

[dependencies.vob]
version = "^1.3"
features = ["unsafe_internals"]

[profile.release]
opt-level = 3
lto = true

[features]
system_alloc = []
m4rm_mul = []
naive_mul = []
strassen_mul = []
