[package]
name = "m4ri-rust"
version = "0.3.2"  # Package version
authors = ["Thom Wiggers <thom@thomwiggers.nl>"]
description = "M4RI-based boolean linear algebra"
repository = "https://github.com/thomwiggers/m4ri-rust"
license = "GPL-2.0+"

[badges]
travis-ci = { repository = "thomwiggers/m4ri-rust" }
maintenance = { status = "experimental" }

[dependencies]
libc = "^0.2"
rand = "^0.8"
m4ri-sys = { version = "0.3.0", path = "../m4ri-sys" }

serde = { version = "1.0", optional = true, features=["derive"] }

[dev-dependencies]
serde_json = "1.0"

[dependencies.vob]
version = "^2"
features = ["unsafe_internals", "serde"]
git = "https://github.com/thomwiggers/vob.git"
branch = "get_storage_nomut"


[features]
system_alloc = []
m4rm_mul = []
naive_mul = []
strassen_mul = []
